Fix pitched battle terrain crash.